--- a/WebContent/views/edituserprofile.html
+++ b/WebContent/views/edituserprofile.html
@@ -3,17 +3,17 @@
 <div class="col-sm-3"></div>
 <div class="col-sm-6">
 
-<center><h1>Register Page</h1></center>
+<center><h1>Edit Your Profile</h1></center>
 <br>
 <br>
 <div id="reg-box">
 <span style="color:red">{{error.message}}</span>
 
-<form name="register">
+<form>
 
 <div class="form-group">
 <label>Enter Email id :</label>
-<input type="email" ng-model="user.email" class="form-control" placeholder="Enter email">
+<input type="email" ng-model="user.email" class="form-control" placeholder="Enter email" disabled="disabled">
 </div>
 
 <div class="form-group">
@@ -33,8 +33,7 @@
 
 <div class="form-group">
 <label>Enter Your Contact No : </label>
-<input type="number" ng-model="user.phone" name="phone" class="form-control" placeholder="Enter your No." pattern="[0-9]{10}]">
-<span ng-show="register.phone.$invalid">Invalid Number</span>
+<input type="text" ng-model="user.phone" class="form-control" placeholder="Enter your No.">
 </div>
 
 <div class="form-group">
@@ -47,7 +46,7 @@
       </select>
 </div>
 
-<input type="submit" ng-disabled="register.phone.$untouched" class="btn btn-default" ng-click="registerUser(user)" value="Register">
+<input type="submit" class="btn btn-default" ng-click="updateUser(user)" value="Edit Profile">
 
 </form>
 </div>
