--- a/WebContent/resources/css/login.css
+++ b/WebContent/resources/css/login.css
@@ -28,3 +28,11 @@
 	-moz-border-radius: 2px; 
 	border: 1px solid #000; 
 }
+
+#box-reg {
+    background-color: #f2f2f2;
+    width: 300px;
+    border: 2px solid black;
+    padding: 25px;
+    margin: 25px;
+}
