--- a/WebContent/views/registerform.html
+++ b/WebContent/views/registerform.html
@@ -1,9 +1,9 @@
 <div class="container">
 <div class="row">
 <div class="col-sm-3"></div>
-<div class="col-sm-6">
+<div class="col-sm-6 jumbotron">
 
-<center><h1>Register Page</h1></center>
+<center><h2>Register Page</h2></center>
 <br>
 <br>
 <div id="reg-box">
@@ -28,12 +28,13 @@
 
 <div class="form-group">
 <label>Enter Password : </label>
-<input type="password" ng-model="user.password" class="form-control" placeholder="Enter password">
+<input type="password" ng-model="user.password" name="pass" class="form-control" placeholder="Enter password" pattern="[0-9]{6}">
+<span ng-show="register.pass.$invalid">Please enter 6 character password</span>
 </div>
 
 <div class="form-group">
 <label>Enter Your Contact No : </label>
-<input type="number" ng-model="user.phone" name="phone" class="form-control" placeholder="Enter your No." pattern="[0-9]{10}]">
+<input type="text" ng-model="user.phone" name="phone" class="form-control" placeholder="Enter your No." pattern="[0-9]{10}">
 <span ng-show="register.phone.$invalid">Invalid Number</span>
 </div>
 
@@ -47,7 +48,7 @@
       </select>
 </div>
 
-<input type="submit" ng-disabled="register.phone.$untouched" class="btn btn-default" ng-click="registerUser(user)" value="Register">
+<input type="submit" ng-disabled="register.phone.$untouched && register.pass.$untouched" class="btn btn-default" ng-click="registerUser(user)" value="Register">
 
 </form>
 </div>
