Add blog completed

--- a/WebContent/views/jobslist.html
+++ b/WebContent/views/jobslist.html
@@ -9,8 +9,8 @@
 				</div>
 
 				<div class="panel-body">
-					<b>Posted On</b>{{job.job_postedOn | date:'medium'}}<br> <b>Skill
-						Reqired</b>{{job.job_skill}}
+					<b>Posted On</b>{{job.job_postedOn | date:'medium'}}<br> 
+					<b>Skill Reqired</b>{{job.job_skill}}
 				</div>
 			</div>
 		</div>
