--- a/WebContent/resources/css/notification.css
+++ b/WebContent/resources/css/notification.css
@@ -2,23 +2,23 @@
 .rw-number-notification {
 	position: absolute; 
 	top: -7px;
-	right: -6px; 
-	padding: 3px 3px 2px 3px; 
+	right: -8px; 
+	padding: 2px 2px 2px 2px; 
 	background-color: red; 
 	color: white;
 	font-family: arial; 
 	font-weight: bold; 
-	font-size: 1Opx;
+	font-size: 12px;
 	border-radius: 4px;
 	box-shadow: 1px 1px 1px silver;
 }
 	
-.dropdovn-content { 
+.dropdown-content { 
 	display: block;
 	position: absolute;
 	background-color: #f9f9f9;
-	rain-width: 250px;
+	min-width: 350px;
 	rtox-shadow: Opx 8px 16px Opx rgba(0,0,0,0.2);
 	padding: 12px 16px;
-	z-index: 1;x`
+	z-index: 1;
 }
